# TechYourChance-Android-Application

./: .gitattributes  .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  gson.pro  proguard-rules.pro  retrofit2.pro
app/src/debug/res/values/: ic_launcher_background.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: jni-facade.cpp
app/src/main/cpp/fibonacci/: fibonacci.cpp  fibonacci.h
app/src/main/res/drawable/: bg_button_standard.xml  bg_destination_item.xml  bg_dialog.xml  bg_edit_text.xml  bg_frame_main_color.xml  circular_progress_drawable.xml  ic_launcher_foreground.xml  ic_more_screens.xml  ic_tyc_logo.xml
app/src/main/res/drawable-v24/: ic_navigate_up.xml
app/src/main/res/layout/: layout_animations.xml  layout_background_tasks_memory_benchmark.xml  layout_base_activity.xml  layout_biometric_auth.xml  layout_debug_drawer.xml  layout_dialog_one_or_two_buttons.xml  layout_dialog_progress.xml  layout_foreground_service.xml  layout_frame.xml  layout_home.xml  layout_home_destination_item.xml  layout_list_of_destinations.xml  layout_my_toolbar.xml  layout_ndk_basics.xml  layout_question_details.xml  layout_question_list_item.xml  layout_questions_list.xml  layout_shared_prefs_edit_benchmark.xml  layout_stacked_cards_animation.xml  layout_threads_overhead.xml  layout_work_manager.xml
app/src/main/res/values/: colors.xml  dimens.xml  ic_launcher_background.xml  strings.xml  styles.xml  (+9 more)
app/src/main/res/values-land/: dimens.xml
app/src/main/res/values-night/: colors.xml  styles.xml
(+357 files in other folders)
